codex: Phase 3A — Minimal Ticket Creation Backend Foundation